# provenance-gradescope-gateway

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LICENSE  NOTICE  README.md  THIRD-PARTY-NOTICES.txt  pyproject.toml
brand/: README.md
deploy/systemd/: README.md  provgate.env.example  provgate.service  provgate.timer
docs/superpowers/plans/: 2026-07-12-provgate.md  2026-07-12-webhook-notifications.md  2026-07-13-chunked-upload-support.md  2026-07-13-gradescope-download.md
docs/superpowers/specs/: 2026-07-12-provenance-gradescope-gateway-design.md  2026-07-12-webhook-notifications-design.md  2026-07-13-chunked-upload-support-design.md  2026-07-13-gradescope-download-design.md
src/provgate/: __init__.py  __main__.py  config.py
src/provgate/cli/: main.py  wiring.py
src/provgate/gradescope/: client.py  parse.py
src/provgate/notify/: render.py  webhook.py
src/provgate/provenance/: client.py
src/provgate/store/: crypto.py  db.py  models.py  repository.py
src/provgate/sync/: engine.py  loop.py  policy.py  ports.py  prune.py
tests/: test_config.py  test_smoke.py
tests/cli/: test_cli.py  test_wiring.py
tests/gradescope/: test_client.py  test_export_live.py  test_parse.py
tests/notify/: test_render.py  test_webhook.py
tests/provenance/: test_client.py
tests/store/: test_crypto.py  test_db.py  test_models.py  test_repository_classes.py  test_repository_watermark.py
tests/support/: export_fixture.py
tests/sync/: test_engine.py  test_loop.py  test_policy.py  test_prune.py
