[project]
name = "provgate"
version = "0.1.0"
description = "Sync Gradescope submissions into a Provenance server on a schedule."
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pyyaml>=6.0",
    "cryptography>=42.0",
    "typer>=0.12",
]

[project.scripts]
provgate = "provgate.cli.main:app"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "respx>=0.21",
    "ruff>=0.6",
    "mypy>=1.11",
    "types-pyyaml>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/provgate"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
packages = ["provgate"]

[tool.pytest.ini_options]
markers = ["live: tests that hit real Gradescope/Provenance (opt-in, need creds)"]
addopts = "-m 'not live'"
pythonpath = ["src"]
testpaths = ["tests"]
